--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "url": "https://github.com/risevision/rise-js-sdk"
   },
   "scripts": {
+    "test": "npm run test-all && npm run tslint",
+    "test-all": "npm run tslint && npm run test-node && npm run test-browser",
+    "tslint": "tslint 'src/**'",
+    "test-node": "mocha test/",
     "package": "shx rm -rf ./dist/; tsc --outDir dist/es5 --target es5 -d && webpack",
+    "coverage": "nyc -e '.ts' -r lcov npm run test-node && cat ./coverage/lcov.info | coveralls",
     "prepublish": "shx rm -rf ./dist/ && npm run package",
     "docs": "shx rm -rf docs ; typedoc -exclude \"**/apis/**\" --theme node_modules/typedoc-clarity-theme/bin --excludePrivate --disableOutputCheck --hideGenerator --module commonjs --mode file --tsconfig ./tsconfig.json  --out docs/ src/; touch docs/.nojekyll "
   },
@@ -41,14 +46,18 @@
     "@types/sinon": "^2.3.1",
     "assert": "1.4.1",
     "chai": "^4.0.2",
+    "coveralls": "^3.0.0",
     "gulp": "^3.9.1",
+    "karma": "^1.7.1",
     "mocha": "^3.4.2",
+    "nyc": "^11.2.1",
     "pug": "^2.0.0-rc.2",
     "shx": "^0.2.2",
     "sinon": "^2.3.2",
     "ts-loader": "^2.1.0",
     "ts-node": "^3.0.6",
     "tslib": "^1.7.1",
+    "tslint": "^5.8.0",
     "typedoc": "^0.7.1",
     "typedoc-clarity-theme": "^1.1.0",
     "typedoc-plugin-internal-external": "^1.0.9",
