--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "npm run test-all && npm run tslint",
     "test-all": "npm run tslint && npm run test-node && npm run test-browser",
     "tslint": "tslint 'src/**'",
+    "test-browser": "karma start karma.conf.js",
     "test-node": "mocha test/",
     "package": "shx rm -rf ./dist/; tsc --outDir dist/es5 --target es5 -d && webpack",
     "coverage": "nyc -e '.ts' -r lcov npm run test-node && cat ./coverage/lcov.info | coveralls",
@@ -49,6 +50,13 @@
     "coveralls": "^3.0.0",
     "gulp": "^3.9.1",
     "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon": "^1.0.5",
+    "karma-typescript": "^3.0.8",
+    "karma-webpack": "^2.0.5",
     "mocha": "^3.4.2",
     "nyc": "^11.2.1",
     "pug": "^2.0.0-rc.2",
@@ -63,6 +71,6 @@
     "typedoc-plugin-internal-external": "^1.0.9",
     "typescript": "~2.3.4",
     "uglifyjs-webpack-plugin": "^0.4.3",
-    "webpack": "^2.6.1"
+    "webpack": "^2.7.0"
   }
 }
