--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "risejs",
+  "name": "dpos-api-wrapper",
   "version": "1.1.4",
-  "description": "Rise SDK built in Node.js",
+  "description": "DPOS API Wrapper written in TypeScript",
   "main": "dist/es5/index.js",
   "types": "dist/es5/index.d.ts",
   "repository": {
@@ -42,12 +42,16 @@
   },
   "devDependencies": {
     "@types/chai": "^4.0.0",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/express": "^4.0.38",
     "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.29",
     "@types/sinon": "^2.3.1",
     "assert": "1.4.1",
     "chai": "^4.0.2",
+    "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.0",
+    "express": "^4.16.2",
     "gulp": "^3.9.1",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
@@ -59,6 +63,7 @@
     "karma-webpack": "^2.0.5",
     "mocha": "^3.4.2",
     "nyc": "^11.2.1",
+    "proxyquire": "^1.8.0",
     "pug": "^2.0.0-rc.2",
     "shx": "^0.2.2",
     "sinon": "^2.3.2",
