--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.10",
   "description": "DPOS API Wrapper written in TypeScript",
   "main": "dist/es5/index.js",
+  "browser": "dist/browser/index.js",
   "types": "dist/es5/index.d.ts",
   "repository": {
     "type": "git",
